--- a/site/config.toml
+++ b/site/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://example.org/"
+baseurl = "https://linzhangcs.github.io/what-did-i-do-today/"
 title = "What did i do today"
 theme = "hugo-creative-portfolio-theme"
 languageCode = "en-us"
