update cms setting and add social links

--- a/config.toml
+++ b/config.toml
@@ -59,11 +59,11 @@ publishdir = "docs"
   [params.social]
   #facebook      = "full page or profile url in facebook"
   #googleplus    = "full profile url in googleplus"
-  email         = "email@example.com"
-  twitter       = "full profile url in twitter"
-  linkedin      = "full profile url in linkedin"
+  email         = "lin.zhang.cs@gmail.com"
+  twitter       = "https://twitter.com/linzhangcs"
+  #linkedin      = "full profile url in linkedin"
   #stackoverflow = "full profile url in stackoverflow"
-  instagram     = "full profile url in instagram"
-  github        = "full profile url in github"
+  instagram     = "https://www.instagram.com/linnnzhang/"
+  github        = "https://github.com/linzhangcs"
   #youtube       = "full profile url in youtube"
   #whatsapp      = "wa.me service link"
